fix(Tabs): rename fullWidth -> isStretched

--- a/packages/components/src/components/Tabs/Tabs.module.css
+++ b/packages/components/src/components/Tabs/Tabs.module.css
@@ -19,7 +19,7 @@
   --tab-min-width: 44px;
 }
 
-.fullWidth:not(.vertical) {
+.stretched:not(.vertical) {
   --tab-width: 100%;
 }
 
